--- a/index.html
+++ b/index.html
@@ -9,91 +9,18 @@
         <meta name="author" content="" />
 
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="stylesheet" href="./css/output.css" />
+        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
 
         <script src="./js/main.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/footer.js"></script>
     </head>
 
     <body class="antialiased w-full">
-        <header class="w-full shadow-sm">
-            <div class="container px-4 mx-auto">
-                <!-- Nav starts -->
-
-                <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
-                        <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
-                    </a>
-                    <div class="lg:hidden">
-                        <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
-                            <svg class="fill-current h-4 w-4" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <title>Mobile Menu</title>
-                                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
-                    </ul>
-                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
-                </nav>
-
-                <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
-                    <div class="navbar-backdrop fixed inset-0 bg-blueGray-800 opacity-25"></div>
-                    <nav class="relative flex flex-col py-6 px-6 w-full h-full bg-white border-r overflow-y-auto">
-                        <div class="flex items-center mb-8">
-                            <a class="mr-auto text-3xl font-semibold leading-none" href="./index.html">
-                                <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
-                            </a>
-                            <button class="navbar-close">
-                                <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                                </svg>
-                            </button>
-                        </div>
-                        <div>
-                            <ul>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Product</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Company</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Features</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./blogs.html">Blogs</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./team.html">Team</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./contact.html">Contact Us</a></li>
-                            </ul>
-                            <div class="mt-2 pt-6 border-t border-blueGray-100">
-                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a
-                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
-                            </div>
-                        </div>
-                        <div class="mt-auto">
-                            <p class="my-4 text-xs text-blueGray-400">
-                                <span>Get in Touch</span>
-                                <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
-                            </p>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                            </a>
-                        </div>
-                    </nav>
-                </div>
-
-                <!-- Nav ends -->
-            </div>
-        </header>
-
+        <header-component></header-component>
         <!-- Index Page Marketing Content Heading And Get Started Button Starts -->
 
         <section class="pt-12 text-center">
@@ -106,8 +33,8 @@
                 <p class="text-blueGray-400 leading-relaxed px-6 sm:px-0">Best-in-Class Copywriting to take your business to the next level!</p>
             </div>
             <div class="flex justify-center items-center flex-col sm:flex-row">
-                <button class="inline-block py-4 px-8 mb-4 sm:mb-0 sm:mr-3 text-xs text-white text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded max-w-[250px] min-w-[180px]">Get Started Now</button>
-                <button class="inline-block py-4 px-8 text-xs text-blueGray-500 hover:text-blueGray-600 bg-gray-100 bg-opacity-70 hover:bg-gray-200 text-center font-semibold leading-none rounded max-w-[250px] min-w-[180px]">Learn More</button>
+                <a class="inline-block py-4 px-8 mb-4 sm:mb-0 sm:mr-3 text-xs text-white text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded max-w-[250px] min-w-[180px]" href="./signup.html">Get Started Now</a>
+                <a class="inline-block py-4 px-8 text-xs text-blueGray-500 hover:text-blueGray-600 bg-gray-100 bg-opacity-70 hover:bg-gray-200 text-center font-semibold leading-none rounded max-w-[250px] min-w-[180px]" href="./company.html">Learn More</a>
             </div>
         </section>
 
@@ -120,8 +47,8 @@
             </div>
         </section>
 
-        <div class="container px-4 mx-auto">
-            <div class="flex flex-wrap justify-between pt-8 pb-16">
+        <div class="px-16 w-full">
+            <div class="flex flex-wrap justify-between pt-8 pb-16 w-full">
                 <div class="flex w-1/2 lg:w-auto py-4 mr-10">
                     <div class="flex justify-center items-center bg-blueGray-50 rounded-xl h-12 w-12 sm:h-20 sm:w-20">
                         <img class="h-6 sm:h-8" src="./metis-assets/icons/user-circle.svg" alt="" />
@@ -153,7 +80,7 @@
         </div>
 
         <section class="pt-16 pb-20 bg-blueGray-50">
-            <div class="container px-8 mx-auto">
+            <div class="px-16 w-full text-center lg:text-left">
                 <div class="flex flex-wrap items-center mb-12">
                     <div class="w-full lg:w-1/2 mb-6 lg:mb-0">
                         <h2 class="text-4xl font-bold">
@@ -234,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex w-full lg:w-1/2 lg:max-w-lg lg:h-128 px-4 lg:pl-16">
+                <div class="flex w-full lg:w-1/2 lg:max-w-lg lg:h-128 px-4 lg:pl-16 justify-center text-center lg:justify-start lg:text-left">
                     <div class="my-auto mx-auto pt-8 lg:pt-0 max-w-2xl lg:max-w-lg">
                         <h2 class="text-3xl md:text-4xl mb-4 font-bold">
                             <span>No need to </span>
@@ -262,7 +189,7 @@
                     <div class="hidden md:flex absolute inset-0 -mt-24 px-16 items-center justify-center max-w-4xl mx-auto">
                         <div class="w-full py-1 shadow"></div>
                     </div>
-                    <div class="flex flex-wrap justify-between w-full">
+                    <div class="flex flex-col md:flex-row justify-center items-center md:justify-between w-full">
                         <div class="w-1/2 md:w-1/4 z-10 mb-12">
                             <div class="flex w-20 h-20 mx-auto items-center justify-center shadow-md bg-white rounded-full outline outline-gray-100 outline-2">
                                 <div class="flex w-16 h-16 mx-auto items-center justify-center text-white font-semibold bg-indigo-600 rounded-full">1</div>
@@ -292,12 +219,14 @@
                     <span class="inline-block text-xs py-1 px-3 bg-indigo-500 rounded text-white font-semibold">Writee your way to glory!</span>
                     <h2 class="my-3 text-3xl md:text-4xl text-white font-bold">The New Standards for Marketing</h2>
                     <p class="text-sm md:text-base text-white">Use our best-in-class tools to help you maximize your ROI. We've uncovered the correct recipe for converting visitors into customers.</p>
-                    <div class="mt-10"><a class="inline-block py-4 px-8 text-xs text-indigo-600 hover:text-white font-semibold leading-none bg-white hover:bg-indigo-600 border hover:border-white rounded transition duration-300" href="#">Get Started</a></div>
+                    <div class="mt-10">
+                        <a class="inline-block py-4 px-8 text-xs text-indigo-600 hover:text-white font-semibold leading-none bg-white hover:bg-indigo-600 border hover:border-white rounded transition duration-300" href="./signup.html">Get Started</a>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="py-20 pb-8 overflow-x-hidden">
+        <!-- <section class="py-20 pb-8 overflow-x-hidden">
             <div class="container px-4 mx-auto">
                 <div class="flex flex-wrap mb-24">
                     <div class="relative w-full lg:w-1/2 h-128 mb-20 lg:mb-0">
@@ -443,87 +372,8 @@
                     </svg>
                 </a>
             </div>
-        </section>
-
+        </section> -->
         <!-- <div class="hidden lg:block absolute inset-0 w-1/2 ml-auto bg-blueGray-50"></div> -->
-        <footer class="relative px-4 pt-4 w-full flex flex-wrap">
-            <div class="w-full lg:w-1/2 pt-10 px-4 lg: pl-12 max-w-lg lg:max-w-full mx-auto lg:mx-0 text-center lg:text-left">
-                <a class="inline-block mx-auto lg:ml-0 text-3xl font-semibold leading-none" href="#">
-                    <img class="h-10" src="./metis-assets/logos/metis/metis.svg" alt="" width="auto" />
-                </a>
-                <div class="mt-12 mb-16 lg:my-8">
-                    <p class="mb-4 text-xs text-blueGray-400 text-center lg:text-left">Subscribe and stay fully connected with product.</p>
-                    <div class="flex flex-wrap lg:flex-nowrap items-center mt-4">
-                        <div class="flex w-full lg:w-2/3 mb-3 lg:mb-0 px-4 bg-blueGray-50 rounded">
-                            <svg class="h-6 w-6 my-auto" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor">
-                                <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
-                                <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
-                            </svg>
-                            <input class="w-full py-4 pl-3 text-xs text-blueGray-400 bg-blueGray-50 outline-none" type="text" placeholder="Type your e-mail" />
-                        </div>
-                        <button class="w-full lg:w-auto py-4 px-8 lg:ml-6 text-xs text-white font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded" type="submit">Sign Up</button>
-                    </div>
-                </div>
-            </div>
-            <div class="w-full lg:w-1/2 px-4 py-8 lg:pt-10 lg:pb-0 lg:pl-12">
-                <div class="flex flex-row flex-wrap justify-around">
-                    <div class="w-1/2 lg:w-auto mb-12">
-                        <h5 class="mb-6 text-lg font-bold">Store</h5>
-                        <ul class="space-y-3">
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">First Link</a></li>
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Second Link</a></li>
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Third Link</a></li>
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Fourth Link</a></li>
-                        </ul>
-                    </div>
-                    <div class="w-1/2 lg:w-auto mb-12">
-                        <h5 class="mb-6 text-lg font-bold">About</h5>
-                        <ul class="space-y-3">
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">First Link</a></li>
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Second Link</a></li>
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Third Link</a></li>
-                        </ul>
-                    </div>
-                    <div class="w-full lg:w-auto mb-4">
-                        <h5 class="mb-6 text-lg font-bold">Catalog</h5>
-                        <ul class="space-y-3">
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">First Link</a></li>
-                            <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Second Link</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- <div class="lg:hidden text-center">
-					<p class="text-xs text-blueGray-400">&copy; 2020. All rights reserved.</p>
-					<div class="-mx-2 mt-4">
-						<a class="inline-block px-2" href="#">
-							<img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-						</a>
-						<a class="inline-block px-2" href="#">
-							<img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-						</a>
-						<a class="inline-block px-2" href="#">
-							<img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-						</a>
-					</div>
-				</div> -->
-            </div>
-            <div class="block w-full pb-4 px-4 border-t border-gray-300">
-                <div class="flex lg:flex-row justify-between items-center flex-col">
-                    <p id="all-rights-reserved" class="text-xs text-blueGray-400 pt-4 lg:pt-2"></p>
-                    <div class="mt-4">
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                        </a>
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                        </a>
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </footer>
+        <footer-component></footer-component>
     </body>
 </html>
